--- a/css/main.css
+++ b/css/main.css
@@ -6,16 +6,14 @@
 }
 body{
     background-color: #222;
-    height: 100vh;
 }
 .card{
     width: 90%;
     max-width: 470px;
     color: #fff;
-    margin: 100px auto 0;
+    margin: 25px auto;
     padding: 40px 35px;
     border-radius: 20px;
-    
     background: linear-gradient(135deg, #00feba, #5b548a);
 }
 .search{
@@ -27,8 +25,68 @@ body{
 .search input {
     border: 0;
     outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 8px;
+    font-size: 18px; 
 }
-.search .search-button{
-    width: 100%;
+.search button{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
+.search-button{
+    width: 24px;
+}
+.search-button:active{
+    width: 65%;
+    transition: all 0.1s ease-in-out;
+}
+.weather{
+    text-align: center;
+}
+.weather-icon{
+    width: 170px;
+    margin-top: 30px;
+}
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+.weather h2{
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.col img{
+    width: 40px;
+    margin-right: 10px;
 
+}
+.humidity, .wind{
+    font-size: 28px;
+    margin-top: -6px;
+}
+.weather{
+    display: none;
 }
